[package]
name = "sync-tokens-example"
version = "0.1.0"
authors = ["Andrew Rondeau <git@andrewrondeau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.*", features = ["attributes"] }
sync-tokens = { git = "https://github.com/GWBasic/sync-tokens", branch = "main" }